--- a/package.json
+++ b/package.json
@@ -1,26 +1,34 @@
 {
-  "name": "19 PWA Text Editor",
+  "name": "19-pwa-text-editor",
+  "version": "1.0.0",
+  "description": "",
+  "main": "server.js",
+
   "scripts": {
-    "dev": "webpack-dev-server",
-    "build": "webpack --mode production",
-    "start": "cd server & npm run server"
+    "start:dev": "concurrently \"cd client && npm run build\" \"cd server && npm run server\" ",
+    "start": "npm run build && cd server && node server.js",
+    "server": "cd server node server.js --ignore client",
+    "build": "cd client && npm run build",
+    "install": "cd client && npm install && cd ../server && npm install",
+    "client": "cd client && npm start"  
   },
-  "author": "2U",
+
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/darcibailey321/19-PWA-Text-Editor.git"
+  },
+  "author": "",
   "license": "ISC",
-  "devDependencies": {
-    "@babel/core": "^7.15.0",
-    "@babel/plugin-transform-runtime": "^7.15.0",
-    "@babel/preset-env": "^7.15.0",
-    "@babel/runtime": "^7.15.3",
-    "babel-loader": "^8.2.2",
-    "html-webpack-plugin": "^5.3.2",
-    "http-server": "^0.11.1",
-    "webpack": "^5.51.1",
-    "webpack-cli": "^4.8.0",
-    "webpack-dev-server": "^4.0.0",
-    "workbox-webpack-plugin": "^6.2.4"
+  "bugs": {
+    "url": "https://github.com/darcibailey321/19-PWA-Text-Editor/issues"
   },
+  "homepage": "https://github.com/darcibailey321/19-PWA-Text-Editor#readme",
+
   "dependencies": {
-    "idb": "^6.1.2"
+    "if-env": "^1.0.4"
+  },
+  "devDependencies": {
+    "concurrently": "^5.2.0",
+    "nodemon": "^2.0.4"
   }
 }
